--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>IFD</title>
-</head>
+<html lang="de">
+    <head>
+        <title>IFD</title>
+    </head>
 
-<body>
-    <h1>Welcome to my page</h1>
-    <p>Interface Design, OMB 5</p>
-</body>
-
+    <body>
+        <h1>Welcome to my page</h1>
+        <p>Interface Design, OMB 5</p>
+    </body>
 
 </html>
